cmake_minimum_required(VERSION 3.23)
project(LabWork)

set(CMAKE_CXX_STANDARD 17)

add_executable(untitled main.cpp DynamicArray.hpp Errors.hpp LinkedList.hpp Smiles.hpp QuickSort.hpp MergeSort.hpp Zoo.hpp ArraySequence.hpp IndexOutOfRange.hpp Sequence.hpp LinkedListSequence.hpp QuickListSort.hpp ISorter.hpp)
